<resources>
    <string name="app_name">بغداد هوم</string>
    <string name="app_name_english">Baghdad Home</string>
    <string name="properties">عقارات</string>
    <string name="commercial">تجاري</string>
    <string name="residential">سكني</string>
    <string name="more">المزيد</string>
    <string name="services">الخدمات</string>
    <string name="add_ads">إضافة اعلان</string>
    <string name="nbhd">الاحياء</string>
    <string name="menu">الرئيسية</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="property_search">البحث الذكي</string>
    <string name="featured_ads">إعلانات مميزه</string>
    <string name="ad_type">Alamir NBHD.</string>
    <string name="all">الكل</string>
    <string name="residence">سكني</string>
    <string name="commericail">تجاري</string>
    <string name="land">اراضي</string>
    <string name="for_sell">For Sell</string>
    <string name="ad_title">عنوان الاعلان</string>
    <string name="street_width">عرض الشارع</string>
    <string name="area_m2">50 m</string>
    <string name="bed_count">2</string>
    <string name="ad_details">A New House Build At 2022 Has Two Floors And Room In The Second</string>
    <string name="price">(300,000,000) IDQ</string>
    <string name="parking">2 Parking</string>
    <string name="bath">2 Bath</string>
    <string name="bed">3 Bed</string>
    <string name="post_an_ad">إضافة اعلان</string>
    <string name="for_rent">للايجار</string>
    <string name="for_sale">للبيع</string>
    <string name="address">العنوان</string>
    <string name="state">ادخل المنطقه الذي يقع فيهاالعقار	</string>
    <string name="city">ادخل الحي الذي يقع فيه العقار</string>
    <string name="property_type">نوع العقار</string>
    <string name="house">منزل</string>
    <string name="property_detail">تفاصيل الاعلان</string>
    <string name="details">تفاصيل الإعلان</string>
    <string name="area_tv">المساحة</string>
    <string name="street_width_">عرض الشارع</string>
    <string name="width">--</string>
    <string name="m">م</string>
    <string name="floors">عدد الطوابق</string>
    <string name="rooms">عدد غرف النوم</string>
    <string name="additional_details">تفاصيل اضافية</string>
    <string name="selling_price">سعر البيع</string>
    <string name="enter_price">أدخل السعر</string>
    <string name="upload_photo">صور العقار</string>
    <string name="contact_deatils">معلومات الاتصال</string>
    <string name="name">الاسم</string>
    <string name="call_number">رقم الاتصال</string>
    <string name="whatsapp_number">رقم الوتساب</string>
    <string name="post_the_ad">نشر الاعلان</string>
    <string name="bathrooms">عدد الحمامات</string>
    <string name="enter_area">ادخل مساحة العقار بالمتر المربع</string>
    <string name="uploadProductImage">Upload Image</string>
    <string name="fromGallery">Gallery</string>
    <string name="openCamera">Camera</string>
    <string name="some_selected_files_not_supported">Some selected files not supported by app.</string>
    <string name="neighbor_search">ابحث عن الحي السكني</string>
    <string name="neighborhoods">الاحياء السكنية</string>
    <string name="city_name">Al-ameer</string>
    <string name="najaf">Baghdad</string>
    <string name="property_Id">الرقم التعريفي للاعلان</string>
    <string name="price_tv">السعر</string>
    <string name="project_id_tv">رقم الاعلان</string>
    <string name="post_details">تفاصيل الاعلان:</string>
    <string name="ad_detail_full">Ads.  Details Ads.  Details Ads.  Details  Ads.  Details  Ads.  Details  Ads.  Details Ads.  Details Ads.  Details   Ads.  Details Ads.  Details Ads.  Details Ads.  Details Ads.  Details   Ads.  Details Ads.  Details</string>
    <string name="report_property">الإبلاغ عن هذا الاعلان</string>
    <string name="whatsapp">واتساب</string>
    <string name="call">اتصال</string>
    <string name="recommended">عقارات مشابهة</string>
    <string name="view_more">view more property like this</string>
    <string name="najaf_homes">بغداد هوم</string>
    <string name="real_estate_service">للخدمات العقارية</string>
    <string name="email_id">email@gmail.com</string>
    <string name="sign_up">انشاء حساب</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="notifications">الاشعارات</string>
    <string name="logout">خروج</string>
    <string name="favorite">المفضلة</string>
    <string name="my_ads">اعلاناتي</string>
    <string name="change_currency">Change currency</string>
    <string name="language">اللغة</string>
    <string name="about">حول</string>
    <string name="version">رقم الاصدار</string>
    <string name="email">البريد الالكتروني</string>
    <string name="enter_email">ادخل البريد الالكتروني الخاص بك</string>
    <string name="password">رمز المرور</string>
    <string name="enter_password">ادخل رمز المرور الخاص بك</string>
    <string name="log_in_with">"او أنشاء حساب عن طريق"</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="enter_name">ادخل الاسم</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_cfm_password">تأكيد رمز المرور </string>
    <string name="register">انشاء حساب</string>
    <string name="sign_in_with">"او  انشاء حساب من خلال"</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="clear">افراغ الحقول</string>
    <string name="done">بحث</string>
    <string name="furniture">الاثاث</string>
    <string name="select_language">لغة العرض</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="services_search">البحث عن الخدمات</string>
    <string name="company_search">البحث عن الشركات</string>
    <string name="company_found">الشركات الموجودة</string>
    <string name="property_found">العقارات الموجودة</string>
    <string name="comp_name">Alrawan Comp.</string>
    <string name="near_address">Alforat -Near Garden .</string>
    <string name="company_time">7:00 To 5:00</string>
    <string name="company_details">"A New Company  Build At 2022 Has More Three Site"</string>
    <string name="facebook_app_id">806501687330596</string>
    <string name="facebook_client_token">c791599ded894e2b1d65a71dac8645e3</string>
    <string name="something_went_wrong">حصل خطأ معين الرجاء المحاوله لاحقا.</string>
    <string name="rent_price">سعر الايجار</string>
    <string name="shop">محل</string>
    <string name="office">مكتب</string>
    <string name="store">مخزن</string>
    <string name="building">بناية</string>
    <string name="factory">مصنع</string>
    <string name="industrial">صناعي</string>
    <string name="showroom">معرض</string>
    <string name="other">اخرى</string>
    <string name="enter_valid_email">الرجاء إدخال بريد الكتروني صحيح.</string>
    <string name="enter_valid_password">الرجاء إدخال كلمه السر</string>
    <string name="please_enter_name">الرجاء إدخال اسم</string>
    <string name="enter_valid_cnf_password">الرجاء تأكيد كلمه السر</string>
    <string name="password_match_error">كلمه السر غير مطابقه</string>
    <string name="please_enter_call_number">please enter your call number</string>
    <string name="please_enter_whatsapp_number">please enter your whatsapp number</string>
    <string name="enter_call_number">ادخل رقم الاتصال الخاص بك</string>
    <string name="enter_whatsapp_number">ادخل رقم الوتساب الخاص بك</string>
    <string name="choose_the_neighborhood">اختر الحي</string>
    <string name="name_comp">الاسم*</string>
    <string name="email_comp">البريد الالكتروني*</string>
    <string name="password_comp">رمز المرور*</string>
    <string name="confirm_password_comp">تأكيد رمز المرور*</string>
    <string name="flat">Flat</string>
    <string name="agriculture">زراعي</string>
    <string name="didnt_have_account">ليس لديك حساب؟</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="edit_the_ad">تعديل الاعلان</string>
    <string name="intenet_error">الرجاء فحص اتصالك بالانترنيت.</string>
    <string name="otp_send">تم ارسال الرمز</string>
    <string name="please_enter_number">please enter your number</string>
    <string name="enter_number">ادخل رقم الوتساب</string>
    <string name="valid_otp">الرجاء إدخال رقم الكود الصحيح</string>
    <string name="enter_otp">الرجاء إدخال رمز الكود</string>
    <string name="verify_otp">تأكيد</string>
    <string name="whatsapp_login">تسجيل الدخول عن طريق الوتساب</string>
    <string name="text_continue">التالي</string>
    <string name="enterotp">الرجاء إدخال الكود</string>
    <string name="enter_digit_otp">ادخل 6 رموز </string>
    <string name="otp_text">تم ارسال رمز التسجيل</string>
    <string name="resend_otp">إعادة ارسال الرمز</string>
    <string name="send">ارسال</string>
    <string name="same_as_whatsapp">مثل رقم الاتصال</string>
    <string name="najaf_portal">بوابة بغداد العقارية</string>
    <string name="apart_house">مشتمل</string>
    <string name="apartment">شقة</string>
    <string name="villa">فلا</string>
    <string name="my_favorite">الإعلانات المفضلة</string>
    <string name="only_three_neighborhood">يمكن اختيار ثلاثة مناطق فقط.</string>
    <string name="distance_hint">00 م</string>
    <string name="price_from_hint">150,000,000 د.ع</string>
    <string name="price_to_hint">250,000,000 د.ع</string>
    <string name="currency_code">د.ع</string>
    <string name="currency_code_usd">دولار أمريكي</string>
    <string name="pm">مسائا</string>
    <string name="am">صباحا</string>
    <string name="services_type">نوع الخدمة</string>
    <string name="working_hours">ساعات العمل</string>
    <string name="overview">نظرة عامة</string>
    <string name="social_media">وسائل التواصل الاجتماعي</string>
    <string name="report_add">الإبلاغ عن اعلان</string>
    <string name="select_from_list">الرجاء الاختيار من القائمة  </string>
    <string name="wrong_type">الإعلان في القسم الخاطئ</string>
    <string name="against_public">الإعلان يخالف الاخلاق العامة</string>
    <string name="sold_property">الإعلان عن عقار مباع مسبقا</string>
    <string name="property_images">صور العقار غير دقيقة</string>
    <string name="property_status">العقار غير متاح</string>
    <string name="hint_comment">اكتب  تعليق</string>
    <string name="send_report_btn">ارسل الإبلاغ عن الاعلان</string>
    <string name="no_property_found">لم يتم العثور على ممتلكات</string>
    <string name="no_company_found">لم يتم العثور على شركة</string>
    <string name="update">تحديث</string>
    <string name="enter_comment">الرجاء إدخال تعليق</string>
    <string name="ok">موافق</string>
    <string name="about_text_1">بغداد هوم\n\n
    يُرسي تطبيقنا معايير جديدة لسوق العقارات في جميع مناطق واحياء العاصمه بغداد ، مدعومًا بابتكارات كندية وشمال امريكيه وفريق من الخبراء العقاريين المحترفين. نجمع بين المعرفة العالمية والرؤية المحلية لتقديم خدمات عقارية فريدة وموثوقة واحترافية.\n\n
    مع تركيزنا على الشفافية والراحة والتكنولوجيا، تربط منصتنا المشترين والبائعين والمستثمرين بفرص حصرية في جميع انحاء بغداد السلام والمحبه. سواء كنت تبحث عن عقارات سكنية أو تجارية أو استثمارية، نقدم حلولاً مصممة خصيصًا مدعومة بخبرات دولية وأدوات مبتكرة تُبسط كل خطوة من رحلة البحث عن عقار.\n\n
    نحن أكثر من مجرد تطبيق، نحن شريكك الموثوق في العثور على العقارات المناسبة والاستثمار فيها والنمو بثقة في سوق العقارات المتطور. مع تطبيق بغداد هوم تكتشف عالم العقار والابتكار بأبهى صوره وأوثق مضمون.\n\n
    بغداد هوم — حلمك حقيقة</string>
    <string name="about_text_2">عندما ترغب في إنشاء أو نشر إعلان عقاري، ستكون مسؤولاً عن محتوى إعلاناتك. أنت تقر بإعفاء بغداد هوم من أي موقف ينشأ عن إعلاناتك أو بعض إعلاناتك بما في ذلك القانونية على سبيل المثال لا الحصر. تحتفظ بغداد هوم بالحق في حظر وحذف أي إعلانات لا تلبي متطلباتها دون أي تحذير أو إشعار آخر.</string>
    <string name="option_cancel">الغاء</string>
    <string name="customer">عميل</string>
    <string name="real_estate_co">شركة عقارات</string>
    <string name="sign_up_as">قم بالتسجيل باسم</string>
</resources>