<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutUsActivity">


    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hacen_tunisia_bold_regular"
            android:text="@string/about"
            android:layout_centerInParent="true"
            android:textColor="@color/darkGrey"
            android:textSize="20dp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/img_icon"
                android:layout_gravity="center_horizontal"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/najaf_homes"
                android:textColor="@color/darkGrey"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_estate_service"
                android:textColor="@color/grey"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_ul"
                android:layout_marginTop="5dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_1"
                android:textColor="@color/darkGrey"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textSize="14dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_2"
                android:textColor="@color/darkGrey"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textSize="14dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/btn_okk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:paddingVertical="8dp"
                android:paddingHorizontal="30dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/whiteNew"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>