<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ReportAddActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/hacen_tunisia_bold_regular"
            android:text="@string/report_add"
            android:textColor="@color/darkGrey"
            android:textSize="20sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/select_from_list"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_report_items"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_comment"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_outline_solid"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:gravity="start"
                android:hint="@string/hint_comment"
                android:minLines="5"
                android:padding="15sp"
                android:textColor="@color/grey"
                android:textSize="17dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_review"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/hacen_tunisia_bold_regular"
                android:textColor="#327FE4"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/report_btn_bg"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp"
                android:text="@string/send_report_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>